--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
 
       <aside class="hero-side video-card">
         <video autoplay muted loop playsinline class="hero-video">
-          <source src="video/perro-caminando.mp4" type="video/mp4">
+          <source src="perro-caminando.mp4" type="video/mp4">
           Tu navegador no soporta video HTML5.
         </video>
         <h2>Un paso a la vez</h2>
@@ -816,7 +816,7 @@
 
         <div class="dog-carousel">
           <article class="dog-card">
-            <img src="perros/luna-golden.png" alt="Luna Golden Retriever" class="dog-img">
+            <img src="luna-golden.png" alt="Luna Golden Retriever" class="dog-img">
             <h3>Luna – Golden Retriever</h3>
             <p class="dog-tagline">Calma, cariñosa, ideal para visitas tranquilas.</p>
             <p>
@@ -826,7 +826,7 @@
           </article>
 
           <article class="dog-card">
-            <img src="perros/bruno-labrador.png" alt="Bruno Labrador" class="dog-img">
+            <img src="bruno-labrador.png" alt="Bruno Labrador" class="dog-img">
             <h3>Bruno – Labrador</h3>
             <p class="dog-tagline">Sereno y siempre leal.</p>
             <p>
@@ -836,7 +836,7 @@
           </article>
 
           <article class="dog-card">
-            <img src="perros/mila-mediana.png" alt="Mila mediana multicolor" class="dog-img">
+            <img src="mila-mediana.png" alt="Mila mediana multicolor" class="dog-img">
             <h3>Mila – Labradora </h3>
             <p class="dog-tagline">Observadora, sensible, muy empática.</p>
             <p>
@@ -847,7 +847,7 @@
           </article>
 
           <article class="dog-card">
-            <img src="perros/simon-mestizo.png" alt="Simón mestizo tranquilo" class="dog-img">
+            <img src="simon-mestizo.png" alt="Simón mestizo tranquilo" class="dog-img">
             <h3>Simón – Mestizo</h3>
             <p class="dog-tagline">El compañero ideal para rutinas suaves.</p>
             <p>
